--- a/project4-css/index.html
+++ b/project4-css/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title>my project simon</title>
- <link rel="stylesheet" href="new 4.css"/>
+ <link rel="stylesheet" href="css/new 4.css"/>
 </head>
 <body>
 <div class="text">
@@ -15,17 +15,17 @@
  </ul>
 </div>
 <div class"text5" style=" border :2px solid#3cb371;">
-  <img class="one" src="sim1.jpg">
+  <img class="one" src="image/sim1.jpg">
   <h2>this is Anime</h2>
   <p class="or">They were animated films</p>
 </div>
 <div class"text5" style=" border :2px solid#3cb371;">
-  <img class="tow" src="sim2.jpg">
+  <img class="tow" src="image/sim2.jpg">
   <h2>this is Ghoulan Tokyo</h2>
   <p class="or"> can live for a whole month, but he faces difficulties</p>
 </div>
 <div class"text5" style=" border :2px solid#3cb371;">
- <img class="thery" src="sim3.jpg">
+ <img class="thery" src="image/sim3.jpg">
  <h2>this is kira</h2>
  <p class="or">this is the person whow wants to cache kira</p>
 </div>
