--- a/project js/index.html
+++ b/project js/index.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>my project simon</title>
+<link rel="stylesheet" href="rlt.css">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/brands.min.css"/>
+  <link rel="stylesheet" href="css/fontawesome.min.css"/>
+  <link rel="stylesheet" href="css/solid.min.css"/>
+
 </head>
 <body style="background-image:url('images/182848.jpg');background-size:cover">
 <nav>
@@ -54,6 +59,8 @@
 			 <button onclick=" market()">markt</button>
 			 <div id="thar"></div>
      </div>
+  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+
   <script src="sim.js"></script>
 </body>
 </html>
